--- a/.gitignore
+++ b/.gitignore
@@ -36,10 +36,11 @@ speed-measure-plugin.json
 /connect.lock
 /coverage
 /libpeerconnection.log
-npm-debug.log
+.log
 yarn-error.log
 testem.log
 /typings
+.firebase
 
 # System Files
 .DS_Store
