--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.10",
+    "@angular/cdk": "~7.3.5",
     "@angular/common": "~7.2.10",
     "@angular/compiler": "~7.2.10",
     "@angular/core": "~7.2.10",
+    "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.2.10",
+    "@angular/material": "^7.3.5",
     "@angular/platform-browser": "~7.2.10",
     "@angular/platform-browser-dynamic": "~7.2.10",
     "@angular/router": "~7.2.10",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "0.9.0"
