--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-hispano",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,22 +10,23 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "smex": "source-map-explorer",
-    "update": "npm-check -u -E",
+    "update": "npm-check -u",
     "deploy": "firebase deploy"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.10",
-    "@angular/cdk": "~7.3.5",
-    "@angular/common": "~7.2.10",
-    "@angular/compiler": "~7.2.10",
-    "@angular/core": "~7.2.10",
+    "@angular/animations": "~7.2.11",
+    "@angular/cdk": "~7.3.6",
+    "@angular/common": "~7.2.11",
+    "@angular/compiler": "~7.2.11",
+    "@angular/core": "~7.2.11",
     "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "~7.2.10",
-    "@angular/material": "^7.3.5",
-    "@angular/platform-browser": "~7.2.10",
-    "@angular/platform-browser-dynamic": "~7.2.10",
-    "@angular/router": "~7.2.10",
+    "@angular/forms": "~7.2.11",
+    "@angular/material": "^7.3.6",
+    "@angular/platform-browser": "~7.2.11",
+    "@angular/platform-browser-dynamic": "~7.2.11",
+    "@angular/router": "~7.2.11",
+    "angulartics2": "^7.4.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
@@ -33,14 +34,14 @@
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.6",
-    "@angular/cli": "~7.3.6",
-    "@angular/compiler-cli": "~7.2.10",
-    "@angular/language-service": "~7.2.10",
+    "@angular-devkit/build-angular": "~0.13.7",
+    "@angular/cli": "~7.3.7",
+    "@angular/compiler-cli": "~7.2.11",
+    "@angular/language-service": "~7.2.11",
     "@types/jasmine": "3.3.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "11.11.6",
-    "codelyzer": "~4.5.0",
+    "@types/node": "^11.13.0",
+    "codelyzer": "^5.0.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -52,7 +53,7 @@
     "protractor": "6.0.0",
     "source-map-explorer": "1.8.0",
     "ts-node": "8.0.3",
-    "tslint": "5.14.0",
+    "tslint": "^5.15.0",
     "typescript": "3.2.4"
   }
 }
