--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-hispano",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -15,17 +15,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.11",
-    "@angular/cdk": "~7.3.6",
-    "@angular/common": "~7.2.11",
-    "@angular/compiler": "~7.2.11",
-    "@angular/core": "~7.2.11",
+    "@angular/animations": "~7.2.13",
+    "@angular/cdk": "~7.3.7",
+    "@angular/common": "~7.2.13",
+    "@angular/compiler": "~7.2.13",
+    "@angular/core": "~7.2.13",
     "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "~7.2.11",
-    "@angular/material": "^7.3.6",
-    "@angular/platform-browser": "~7.2.11",
-    "@angular/platform-browser-dynamic": "~7.2.11",
-    "@angular/router": "~7.2.11",
+    "@angular/forms": "~7.2.13",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "~7.2.13",
+    "@angular/platform-browser-dynamic": "~7.2.13",
+    "@angular/router": "~7.2.13",
     "angulartics2": "^7.4.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
@@ -34,15 +34,15 @@
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.7",
-    "@angular/cli": "~7.3.7",
-    "@angular/compiler-cli": "~7.2.11",
-    "@angular/language-service": "~7.2.11",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "~7.3.8",
+    "@angular/compiler-cli": "~7.2.13",
+    "@angular/language-service": "~7.2.13",
     "@types/jasmine": "3.3.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^11.13.0",
+    "@types/node": "^11.13.2",
     "codelyzer": "^5.0.0",
-    "jasmine-core": "3.3.0",
+    "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
