--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/service-worker": "~9.1.4",
     "angulartics2": "^9.0.0",
     "firebase": "^7.14.2",
+    "ngx-auth-firebaseui": "^2.6.0",
     "rxjs": "~6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
