--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:sm": "ng build --prod --source-map",
     "build:prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,14 +21,18 @@
     "@angular/common": "~7.2.13",
     "@angular/compiler": "~7.2.13",
     "@angular/core": "~7.2.13",
+    "@angular/fire": "^5.1.2",
     "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.2.13",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.13",
     "@angular/platform-browser-dynamic": "~7.2.13",
     "@angular/router": "~7.2.13",
+    "@firebase/app": "^0.3.15",
+    "@firebase/app-types": "^0.3.8",
     "angulartics2": "^7.4.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.9.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
