--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-hispano",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -16,40 +16,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.13",
+    "@angular/animations": "~7.2.14",
     "@angular/cdk": "~7.3.7",
-    "@angular/common": "~7.2.13",
-    "@angular/compiler": "~7.2.13",
-    "@angular/core": "~7.2.13",
+    "@angular/common": "~7.2.14",
+    "@angular/compiler": "~7.2.14",
+    "@angular/core": "~7.2.14",
     "@angular/fire": "^5.1.2",
     "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "~7.2.13",
+    "@angular/forms": "~7.2.14",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "~7.2.13",
-    "@angular/platform-browser-dynamic": "~7.2.13",
-    "@angular/router": "~7.2.13",
-    "@firebase/app": "^0.3.15",
-    "@firebase/app-types": "^0.3.8",
-    "angulartics2": "^7.4.1",
+    "@angular/platform-browser": "~7.2.14",
+    "@angular/platform-browser-dynamic": "~7.2.14",
+    "@angular/router": "~7.2.14",
+    "@firebase/app": "^0.3.16",
+    "@firebase/app-types": "^0.3.9",
+    "angulartics2": "^7.5.1",
     "core-js": "^2.5.4",
-    "firebase": "^5.9.4",
+    "firebase": "^5.10.0",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "~7.3.8",
-    "@angular/compiler-cli": "~7.2.13",
-    "@angular/language-service": "~7.2.13",
+    "@angular/compiler-cli": "~7.2.14",
+    "@angular/language-service": "~7.2.14",
     "@types/jasmine": "3.3.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^11.13.2",
+    "@types/node": "^11.13.7",
     "codelyzer": "^5.0.0",
+    "firebase-tools": "^6.7.1",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "2.0.1",
@@ -57,8 +58,8 @@
     "npm-check": "5.9.0",
     "protractor": "6.0.0",
     "source-map-explorer": "1.8.0",
-    "ts-node": "8.0.3",
-    "tslint": "^5.15.0",
-    "typescript": "3.2.4"
+    "ts-node": "~8.1.0",
+    "tslint": "~5.16.0",
+    "typescript": "~3.2.4"
   }
 }
