--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
     "@angular/common": "~7.2.14",
     "@angular/compiler": "~7.2.14",
     "@angular/core": "~7.2.14",
-    "@angular/fire": "^5.1.2",
+    "@angular/fire": "5.1.2",
     "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.2.14",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.14",
     "@angular/platform-browser-dynamic": "~7.2.14",
     "@angular/router": "~7.2.14",
-    "@firebase/app": "^0.3.16",
-    "@firebase/app-types": "^0.3.9",
-    "angulartics2": "^7.5.1",
+    "@firebase/app": "0.3.16",
+    "@firebase/app-types": "0.3.9",
+    "@firebase/performance-types": "0.0.1",
+    "angulartics2": "^7.5.2",
     "core-js": "^2.5.4",
-    "firebase": "^5.10.0",
+    "firebase": "~5.10.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -45,16 +46,16 @@
     "@angular/language-service": "~7.2.14",
     "@types/jasmine": "3.3.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^11.13.7",
-    "codelyzer": "^5.0.0",
-    "firebase-tools": "^6.7.1",
+    "@types/node": "^11.13.8",
+    "codelyzer": "^5.0.1",
+    "firebase-tools": "^6.7.2",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "npm-check": "5.9.0",
     "protractor": "6.0.0",
     "source-map-explorer": "1.8.0",
