--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-hispano",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -16,34 +16,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.0-rc.5",
-    "@angular/cdk": "~8.0.0-rc.2",
-    "@angular/common": "~8.0.0-rc.5",
-    "@angular/compiler": "~8.0.0-rc.5",
-    "@angular/core": "~8.0.0-rc.5",
+    "@angular/animations": "~8.0.0",
+    "@angular/cdk": "~8.0.0",
+    "@angular/common": "~8.0.0",
+    "@angular/compiler": "~8.0.0",
+    "@angular/core": "~8.0.0",
     "@angular/fire": "5.2.0-rc.1",
     "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "~8.0.0-rc.5",
-    "@angular/material": "^8.0.0-rc.2",
-    "@angular/platform-browser": "~8.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "~8.0.0-rc.5",
-    "@angular/router": "~8.0.0-rc.5",
+    "@angular/forms": "~8.0.0",
+    "@angular/material": "^8.0.0",
+    "@angular/platform-browser": "~8.0.0",
+    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/router": "~8.0.0",
     "angulartics2": "^7.5.2",
     "core-js": "^2.5.4",
-    "firebase": "^6.0.4",
+    "firebase": "^6.1.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0-rc.4",
-    "@angular/cli": "~8.0.0-rc.4",
-    "@angular/compiler-cli": "~8.0.0-rc.5",
-    "@angular/language-service": "~8.0.0-rc.5",
-    "@types/jasmine": "3.3.12",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "~8.0.0",
+    "@angular/compiler-cli": "~8.0.0",
+    "@angular/language-service": "~8.0.0",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.0.2",
+    "@types/node": "^12.0.3",
     "codelyzer": "^5.0.1",
     "firebase-tools": "^6.10.0",
     "jasmine-core": "^3.4.0",
