build: utilizar @angular/fire's ng run web:deploy
añadir los peer dependencies de `@angular/fire@5.2.0-rc.2`

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "angular-latino"
+  },
+  "targets": {
+    "angular-latino": {
+      "hosting": {
+        "web": [
+          "angular-latino"
+        ]
+      }
+    }
   }
 }
