--- a/angular.json
+++ b/angular.json
@@ -109,9 +109,13 @@
               "**/node_modules/**"
             ]
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    },
+    }
   },
   "defaultProject": "web"
 }
