--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "ng e2e",
     "smex": "source-map-explorer",
     "update": "npm-check -u",
-    "deploy": "firebase deploy"
+    "deploy": "ng run web:deploy"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +21,7 @@
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
-    "@angular/fire": "5.2.0-rc.1",
+    "@angular/fire": "5.2.0-rc.2",
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.0.0",
     "@angular/material": "^8.0.0",
@@ -37,15 +37,20 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.800.0",
     "@angular-devkit/build-angular": "~0.800.0",
+    "@angular-devkit/core": "^8.0.0",
+    "@angular-devkit/schematics": "^8.0.0",
     "@angular/cli": "~8.0.0",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.0.3",
+    "@types/node": "^12.0.4",
     "codelyzer": "^5.0.1",
     "firebase-tools": "^6.10.0",
+    "fuzzy": "^0.1.3",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -57,7 +62,8 @@
     "protractor": "6.0.0",
     "source-map-explorer": "1.8.0",
     "ts-node": "^8.2.0",
-    "tslint": "~5.16.0",
-    "typescript": "~3.4.5"
+    "tslint": "^5.17.0",
+    "typescript": "~3.4.5",
+    "inquirer": "^6.2.2"
   }
 }
