--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
-    "@angular/fire": "5.2.0-rc.2",
+    "@angular/fire": "5.2.0",
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.0.0",
     "@angular/material": "^8.0.0",
@@ -37,11 +37,11 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.800.0",
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular-devkit/core": "^8.0.0",
-    "@angular-devkit/schematics": "^8.0.0",
-    "@angular/cli": "~8.0.0",
+    "@angular-devkit/architect": "^0.800.1",
+    "@angular-devkit/build-angular": "~0.800.1",
+    "@angular-devkit/core": "^8.0.1",
+    "@angular-devkit/schematics": "^8.0.1",
+    "@angular/cli": "~8.0.1",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
     "@types/jasmine": "^3.3.13",
@@ -50,6 +50,7 @@
     "codelyzer": "^5.0.1",
     "firebase-tools": "^6.10.0",
     "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -63,7 +64,6 @@
     "source-map-explorer": "1.8.0",
     "ts-node": "^8.2.0",
     "tslint": "^5.17.0",
-    "typescript": "~3.4.5",
-    "inquirer": "^6.2.2"
+    "typescript": "~3.4.5"
   }
 }
