--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ speed-measure-plugin.json
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
+!.vscode/README.md
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
