--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "angular-hispano",
   "version": "0.2.2",
   "scripts": {
+    "e2e": "ng e2e",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "build:sm": "ng build --prod --source-map",
     "build:prod": "ng build --prod",
-    "test": "ng test",
+    "deploy": "ng run web:deploy",
+    "format": "git-clang-format HEAD $(git diff HEAD --name-only | grep -v \"\\.d\\.ts\")",
     "lint": "ng lint",
-    "e2e": "ng e2e",
     "smex": "source-map-explorer",
-    "update": "npm-check -u",
-    "deploy": "ng run web:deploy"
+    "stylelint": "stylelint '**/*.scss' --config .stylelintrc --syntax scss",
+    "test": "ng test",
+    "update": "npm-check -u"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +23,7 @@
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
-    "@angular/fire": "5.2.0",
+    "@angular/fire": "5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.0.0",
     "@angular/material": "^8.0.0",
@@ -47,11 +49,10 @@
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.0.4",
+    "autoprefixer": "^6.7.6",
     "codelyzer": "^5.0.1",
+    "clang-format": "^1.2.4",
     "firebase-tools": "^6.10.0",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -59,9 +60,11 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "minimatch": "^3.0.4",
     "npm-check": "5.9.0",
     "protractor": "6.0.0",
     "source-map-explorer": "1.8.0",
+    "stylelint": "^9.10.1",
     "ts-node": "^8.2.0",
     "tslint": "^5.17.0",
     "typescript": "~3.4.5"
