--- a/package.json
+++ b/package.json
@@ -32,27 +32,27 @@
     "@angular/router": "~8.0.0",
     "angulartics2": "^7.5.2",
     "core-js": "^2.5.4",
-    "firebase": "^6.1.0",
+    "firebase": "^6.1.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.800.1",
-    "@angular-devkit/build-angular": "~0.800.1",
-    "@angular-devkit/core": "^8.0.1",
-    "@angular-devkit/schematics": "^8.0.1",
-    "@angular/cli": "~8.0.1",
+    "@angular-devkit/architect": "^0.800.2",
+    "@angular-devkit/build-angular": "~0.800.2",
+    "@angular-devkit/core": "^8.0.2",
+    "@angular-devkit/schematics": "^8.0.2",
+    "@angular/cli": "~8.0.2",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.0.4",
+    "@types/node": "^12.0.7",
     "autoprefixer": "^6.7.6",
-    "codelyzer": "^5.0.1",
     "clang-format": "^1.2.4",
-    "firebase-tools": "^6.10.0",
+    "codelyzer": "^5.1.0",
+    "firebase-tools": "^6.11.0",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -63,8 +63,8 @@
     "minimatch": "^3.0.4",
     "npm-check": "5.9.0",
     "protractor": "6.0.0",
-    "source-map-explorer": "1.8.0",
-    "stylelint": "^9.10.1",
+    "source-map-explorer": "^2.0.0",
+    "stylelint": "^10.1.0",
     "ts-node": "^8.2.0",
     "tslint": "^5.17.0",
     "typescript": "~3.4.5"
