--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.0",
+    "@angular/animations": "~8.1.0-next.1",
     "@angular/cdk": "~8.0.0",
-    "@angular/common": "~8.0.0",
-    "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
+    "@angular/common": "~8.1.0-next.1",
+    "@angular/compiler": "~8.1.0-next.1",
+    "@angular/core": "~8.1.0-next.1",
     "@angular/fire": "5.2.1",
-    "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "~8.0.0",
+    "@angular/forms": "~8.1.0-next.1",
     "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "~8.0.0",
-    "@angular/platform-browser-dynamic": "~8.0.0",
-    "@angular/router": "~8.0.0",
+    "@angular/platform-browser": "~8.1.0-next.1",
+    "@angular/platform-browser-dynamic": "~8.1.0-next.1",
+    "@angular/router": "~8.1.0-next.1",
     "angulartics2": "^7.5.2",
     "core-js": "^2.5.4",
     "firebase": "^6.1.1",
@@ -44,8 +43,8 @@
     "@angular-devkit/core": "^8.0.2",
     "@angular-devkit/schematics": "^8.0.2",
     "@angular/cli": "~8.0.2",
-    "@angular/compiler-cli": "~8.0.0",
-    "@angular/language-service": "~8.0.0",
+    "@angular/compiler-cli": "~8.1.0-next.1",
+    "@angular/language-service": "~8.1.0-next.1",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.0.7",
