build: enable Ivy
migrate workspace for @angular/core@9.0.0-beta
Decorates all declared undecorated provider classes with @Injectable
Angular CLI update
@angular/material@next
- adjust sidenav width to match material design spec
- fix tests broken by change to Angular Material `9.0.0-next.0`

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,8 @@ speed-measure-plugin.json
 yarn-error.log
 testem.log
 /typings
-.firebase
+firebase-debug.log
+.firebase/
 
 # System Files
 .DS_Store
