--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
     "types": [
@@ -8,8 +8,8 @@
     ]
   },
   "files": [
-    "src/test.ts",
-    "src/polyfills.ts"
+    "projects/web/src/test.ts",
+    "projects/web/src/polyfills.ts"
   ],
   "include": [
     "**/*.spec.ts",
