--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-hispano",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "scripts": {
     "e2e": "ng e2e",
     "ng": "ng",
@@ -20,54 +20,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.3",
-    "@angular/cdk": "~8.1.3",
-    "@angular/common": "~8.2.3",
-    "@angular/compiler": "~8.2.3",
-    "@angular/core": "~8.2.3",
+    "@angular/animations": "~9.0.0-next.9",
+    "@angular/cdk": "~9.0.0-next.0",
+    "@angular/common": "~9.0.0-next.9",
+    "@angular/compiler": "~9.0.0-next.9",
+    "@angular/core": "~9.0.0-next.9",
     "@angular/fire": "5.2.1",
-    "@angular/forms": "~8.2.3",
-    "@angular/material": "^8.1.3",
-    "@angular/platform-browser": "~8.2.3",
-    "@angular/platform-browser-dynamic": "~8.2.3",
-    "@angular/router": "~8.2.3",
-    "angulartics2": "^8.0.0",
-    "core-js": "^2.5.4",
+    "@angular/forms": "~9.0.0-next.9",
+    "@angular/material": "^9.0.0-next.0",
+    "@angular/platform-browser": "~9.0.0-next.9",
+    "@angular/platform-browser-dynamic": "~9.0.0-next.9",
+    "@angular/router": "~9.0.0-next.9",
+    "angulartics2": "^8.1.0",
+    "core-js": "^2.6.9",
     "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.5.2",
+    "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "^0.10.2"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.0",
-    "@angular-devkit/build-angular": "^0.803.0",
-    "@angular-devkit/core": "^8.3.0",
-    "@angular-devkit/schematics": "^8.3.0",
-    "@angular/cli": "~8.3.0",
-    "@angular/compiler-cli": "~8.2.3",
-    "@angular/language-service": "~8.2.3",
-    "@types/jasmine": "^3.4.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.7.2",
+    "@angular-devkit/architect": "^0.900.0-next.8",
+    "@angular-devkit/build-angular": "~0.900.0-next.8",
+    "@angular-devkit/core": "^9.0.0-next.8",
+    "@angular-devkit/schematics": "^9.0.0-next.8",
+    "@angular/cli": "~9.0.0-next.8",
+    "@angular/compiler-cli": "~9.0.0-next.9",
+    "@angular/language-service": "~9.0.0-next.9",
+    "@types/jasmine": "^3.4.2",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.7.11",
     "clang-format": "^1.2.4",
-    "codelyzer": "^5.1.0",
-    "firebase-tools": "^7.2.4",
-    "jasmine-core": "^3.4.0",
+    "codelyzer": "^5.1.2",
+    "firebase-tools": "^7.5.0",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.2.0",
+    "karma": "^4.3.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-firefox-launcher": "^1.2.0",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "minimatch": "^3.0.4",
-    "npm-check": "5.9.0",
-    "protractor": "6.0.0",
-    "source-map-explorer": "^2.0.1",
-    "stylelint": "^10.1.0",
-    "ts-node": "^8.3.0",
-    "tslint": "^5.19.0",
+    "npm-check": "^5.9.0",
+    "protractor": "^6.0.0",
+    "source-map-explorer": "^2.1.0",
+    "stylelint": "^11.0.0",
+    "ts-node": "^8.4.1",
+    "tslint": "^5.20.0",
     "typescript": "~3.5.3"
   }
 }
