--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,17 @@
     "**/dist": true,
   },
   "git.ignoreLimitWarning": true,
+  // Wrap attributes.
+  //  - auto: Wrap attributes only when line length is exceeded.
+  //  - force: Wrap each attribute except first.
+  //  - force-aligned: Wrap each attribute except first and keep aligned.
+  //  - force-expand-multiline: Wrap each attribute.
+  //  - aligned-multiple: Wrap when line length is exceeded, align attributes vertically.
+  //  - preserve: Preserve wrapping of attributes
+  //  - preserve-aligned: Preserve wrapping of attributes but align.
+  "html.format.wrapAttributes": "auto",
+  // Maximum amount of characters per line (0 = disable).
+  "html.format.wrapLineLength": 100,
   "css.validate": false,
   "scss.validate": false
 }
