--- a/package.json
+++ b/package.json
@@ -18,44 +18,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.2",
-    "@angular/cdk": "~8.1.1",
-    "@angular/common": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/core": "~8.1.2",
+    "@angular/animations": "~8.2.0",
+    "@angular/cdk": "~8.1.2",
+    "@angular/common": "~8.2.0",
+    "@angular/compiler": "~8.2.0",
+    "@angular/core": "~8.2.0",
     "@angular/fire": "5.2.1",
-    "@angular/forms": "~8.1.2",
-    "@angular/material": "^8.1.1",
-    "@angular/platform-browser": "~8.1.2",
-    "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
-    "angulartics2": "^7.5.2",
+    "@angular/forms": "~8.2.0",
+    "@angular/material": "^8.1.2",
+    "@angular/platform-browser": "~8.2.0",
+    "@angular/platform-browser-dynamic": "~8.2.0",
+    "@angular/router": "~8.2.0",
+    "angulartics2": "^8.0.0",
     "core-js": "^2.5.4",
-    "firebase": "^6.3.1",
+    "firebase": "^6.3.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.10.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.801.2",
-    "@angular-devkit/build-angular": "^0.801.2",
-    "@angular-devkit/core": "^8.1.2",
-    "@angular-devkit/schematics": "^8.1.2",
-    "@angular/cli": "~8.1.2",
-    "@angular/compiler-cli": "~8.1.2",
-    "@angular/language-service": "~8.1.2",
-    "@types/jasmine": "^3.3.14",
+    "@angular-devkit/architect": "^0.802.0",
+    "@angular-devkit/build-angular": "^0.802.0",
+    "@angular-devkit/core": "^8.2.0",
+    "@angular-devkit/schematics": "^8.2.0",
+    "@angular/cli": "~8.2.0",
+    "@angular/compiler-cli": "~8.2.0",
+    "@angular/language-service": "~8.2.0",
+    "@types/jasmine": "^3.3.16",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.6.8",
+    "@types/node": "^12.7.0",
     "clang-format": "^1.2.4",
     "codelyzer": "^5.1.0",
-    "firebase-tools": "^7.1.1",
+    "firebase-tools": "^7.2.2",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.2.0",
     "karma-chrome-launcher": "^3.0.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
@@ -66,6 +66,6 @@
     "stylelint": "^10.1.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
-    "typescript": "~3.4.5"
+    "typescript": "~3.5.3"
   }
 }
