--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-hispano",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "scripts": {
     "e2e": "ng e2e",
     "ng": "ng",
@@ -9,56 +9,56 @@
     "build": "ng build",
     "build:sm": "ng build --prod --source-map",
     "build:prod": "ng build --prod",
-    "deploy": "ng run web:deploy",
+    "deploy": "ng deploy",
     "format": "git-clang-format HEAD $(git diff HEAD --name-only | grep -v \"\\.d\\.ts\")",
     "lint": "ng lint",
     "smex": "source-map-explorer",
     "stylelint": "stylelint '**/*.scss' --config .stylelintrc --syntax scss",
     "test": "ng test",
-    "test:ci": "ng test --watch=false --browsers=ChromeHeadless",
+    "test:ci": "ng test --watch=false --browsers='ChromeHeadlessNoSandbox,FirefoxHeadless'",
     "update": "npm-check -u"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0",
-    "@angular/cdk": "~8.1.2",
-    "@angular/common": "~8.2.0",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
+    "@angular/animations": "~8.2.3",
+    "@angular/cdk": "~8.1.3",
+    "@angular/common": "~8.2.3",
+    "@angular/compiler": "~8.2.3",
+    "@angular/core": "~8.2.3",
     "@angular/fire": "5.2.1",
-    "@angular/forms": "~8.2.0",
-    "@angular/material": "^8.1.2",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/router": "~8.2.0",
+    "@angular/forms": "~8.2.3",
+    "@angular/material": "^8.1.3",
+    "@angular/platform-browser": "~8.2.3",
+    "@angular/platform-browser-dynamic": "~8.2.3",
+    "@angular/router": "~8.2.3",
     "angulartics2": "^8.0.0",
     "core-js": "^2.5.4",
-    "firebase": "^6.3.4",
+    "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
-    "zone.js": "^0.10.1"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.802.0",
-    "@angular-devkit/build-angular": "^0.802.0",
-    "@angular-devkit/core": "^8.2.0",
-    "@angular-devkit/schematics": "^8.2.0",
-    "@angular/cli": "~8.2.0",
-    "@angular/compiler-cli": "~8.2.0",
-    "@angular/language-service": "~8.2.0",
-    "@types/jasmine": "^3.3.16",
+    "@angular-devkit/architect": "^0.803.0",
+    "@angular-devkit/build-angular": "^0.803.0",
+    "@angular-devkit/core": "^8.3.0",
+    "@angular-devkit/schematics": "^8.3.0",
+    "@angular/cli": "~8.3.0",
+    "@angular/compiler-cli": "~8.2.3",
+    "@angular/language-service": "~8.2.3",
+    "@types/jasmine": "^3.4.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.7.0",
+    "@types/node": "^12.7.2",
     "clang-format": "^1.2.4",
     "codelyzer": "^5.1.0",
-    "firebase-tools": "^7.2.2",
+    "firebase-tools": "^7.2.4",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.2.0",
-    "karma-chrome-launcher": "^3.0.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
-    "karma-firefox-launcher": "^1.1.0",
+    "karma-firefox-launcher": "^1.2.0",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "minimatch": "^3.0.4",
@@ -67,7 +67,7 @@
     "source-map-explorer": "^2.0.1",
     "stylelint": "^10.1.0",
     "ts-node": "^8.3.0",
-    "tslint": "^5.18.0",
+    "tslint": "^5.19.0",
     "typescript": "~3.5.3"
   }
 }
