build: enable Prettier
- fix lint warning of deprecated API
- remove clang-format
- configure for VSCode

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,7 @@
   // Lista de extensiones que deben recomendarse para los usuarios de este espacio de trabajo.
   "recommendations": [
     "ms-vscode.vscode-typescript-tslint-plugin",
-    "xaver.clang-format",
+    "esbenp.prettier-vscode",
     "angular.ng-template",
     "shinnn.stylelint",
     "editorconfig.editorconfig"
