--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,11 +4,6 @@
     "outDir": "../../out-tsc/app",
     "types": []
   },
-  "files": [
-    "projects/web/src/main.ts",
-    "projects/web/src/polyfills.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ]
+  "files": ["projects/web/src/main.ts", "projects/web/src/polyfills.ts"],
+  "include": ["src/**/*.d.ts"]
 }
