--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,19 @@
 {
-  // Formatear archivos js y ts en guardar con `clang-format.executable`
-  "[javascript]": {
-    "editor.formatOnSave": true
-  },
-  "[typescript]": {
-    "editor.formatOnSave": true
-  },
-  // Instale https://marketplace.visualstudio.com/items?itemName=xaver.clang-format para aprovechar
-  // el `clang-format` en VSCode.
-  // Consulte https://clang.llvm.org/docs/ClangFormat.html para obtener más información
-  // `clang-format`.
-  "clang-format.executable": "${workspaceRoot}/node_modules/.bin/clang-format",
-  "editor.defaultFormatter": "xaver.clang-format",
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   // Excluya módulos de terceros y genere artefactos de los observadores / búsquedas del editor.
   "files.watcherExclude": {
     "**/.git/objects/**": true,
     "**/.git/subtree-cache/**": true,
     "**/node_modules/**": true,
     "**/bazel-out/**": true,
-    "**/dist/**": true,
+    "**/dist/**": true
   },
   "search.exclude": {
     "**/node_modules": true,
     "**/bower_components": true,
     "**/bazel-out": true,
-    "**/dist": true,
+    "**/dist": true
   },
   "git.ignoreLimitWarning": true,
   // Wrap attributes.
