--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:sm": "ng build --prod --source-map",
     "build:prod": "ng build --prod",
     "deploy": "ng deploy",
-    "format": "git-clang-format HEAD $(git diff HEAD --name-only | grep -v \"\\.d\\.ts\")",
+    "format": "npm run prettier",
+    "prettier": "prettier --write \"**/*.{js,json,css,scss,md,ts,html,component.html}\"",
     "lint": "ng lint",
     "smex": "source-map-explorer",
     "stylelint": "stylelint '**/*.scss' --config .stylelintrc --syntax scss",
@@ -48,13 +49,13 @@
     "@angular/cli": "~9.0.0-next.8",
     "@angular/compiler-cli": "~9.0.0-next.9",
     "@angular/language-service": "~9.0.0-next.9",
+    "@schuchard/prettier": "^3.1.0",
     "@types/jasmine": "^3.4.2",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.7.11",
-    "clang-format": "^1.2.4",
     "codelyzer": "^5.1.2",
     "firebase-tools": "^7.5.0",
-    "husky": "^3.0.9",
+    "husky": "3.0.9",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.3.0",
@@ -63,18 +64,27 @@
     "karma-firefox-launcher": "^1.2.0",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "lint-staged": "9.4.2",
     "minimatch": "^3.0.4",
     "npm-check": "^5.9.0",
+    "prettier": "1.19.1",
     "protractor": "^6.0.0",
     "source-map-explorer": "^2.1.0",
     "stylelint": "^11.0.0",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
+    "tslint-config-prettier": "1.18.0",
     "typescript": "~3.5.3"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format"
+      "pre-commit": "lint-staged && ng lint && npm run stylelint"
     }
+  },
+  "lint-staged": {
+    "*.{js,json,css,scss,md,ts,html,component.html}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
