fix(pwa): correcciones de pruebas en producción
- serve ng-honduras logo to avoid CORS issues
- Apple and Microsoft PWA enhancements

Closes #64

--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "projects/web/src/favicon.ico",
+              "projects/web/src/apple-touch-icon.png",
               "projects/web/src/assets",
               "projects/web/src/robots.txt",
               "projects/web/src/sitemap.xml",
