--- a/projects/web/ngsw-config.json
+++ b/projects/web/ngsw-config.json
@@ -6,7 +6,21 @@
       "name": "app",
       "installMode": "prefetch",
       "resources": {
-        "files": ["/favicon.ico", "/index.html", "/manifest.webmanifest", "/*.css", "/*.js"]
+        "files": [
+          "/favicon.ico",
+          "/apple-touch-icon.png",
+          "/index.html",
+          "/manifest.webmanifest",
+          "/*.css",
+          "/*.js"
+        ],
+        "urls": [
+          "https://lh6.googleusercontent.com/**/*",
+          "https://fonts.gstatic.com/s/**/*",
+          "https://fonts.googleapis.com/css*",
+          "https://fonts.googleapis.com/icon?family=Material+Icons",
+          "https://fonts.googleapis.com/css?family=Roboto*"
+        ]
       }
     },
     {
@@ -14,7 +28,7 @@
       "installMode": "lazy",
       "updateMode": "prefetch",
       "resources": {
-        "files": ["/assets/**", "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"]
+        "files": ["/assets/**/*", "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani|ijmap)"]
       }
     }
   ]
