build: agregar entorno de preparación
- solucionar algunos problemas con SwUpdateService
- actualizar @angular/fire, firebase-tools, y rxjs

Relates to #94

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,8 +1,17 @@
 {
   "projects": {
-    "default": "angular-latino"
+    "default": "angular-hispano-staging",
+    "staging": "angular-hispano-staging",
+    "production": "angular-latino"
   },
   "targets": {
+    "angular-hispano-staging": {
+      "hosting": {
+        "web": [
+          "angular-hispano-staging"
+        ]
+      }
+    },
     "angular-latino": {
       "hosting": {
         "web": [
