--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "ng serve",
     "start:mobile-testing": "ng serve --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
-    "build:sm": "ng build --prod --source-map",
-    "build:prod": "ng build --prod",
-    "deploy": "ng deploy",
+    "build:sm": "ng build --configuration=staging --source-map",
+    "build:staging": "ng build --configuration=staging",
+    "build:prod": "ng build --configuration=production",
+    "deploy": "npm run build:staging && firebase use staging && firebase deploy --only hosting",
+    "deploy:prod": "npm run build:prod && firebase use production && firebase deploy --only hosting",
     "format": "npm run prettier",
     "prettier": "prettier --write \"**/*.{js,json,css,scss,md,ts,html,component.html}\"",
     "lint": "ng lint",
@@ -26,9 +28,9 @@
     "@angular/common": "~9.0.0-rc.5",
     "@angular/compiler": "~9.0.0-rc.5",
     "@angular/core": "~9.0.0-rc.5",
-    "@angular/fire": "^5.2.3",
+    "@angular/fire": "~5.4.2",
     "@angular/forms": "~9.0.0-rc.5",
-    "@angular/material": "^9.0.0-rc.5",
+    "@angular/material": "~9.0.0-rc.5",
     "@angular/platform-browser": "~9.0.0-rc.5",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.5",
     "@angular/router": "~9.0.0-rc.5",
@@ -36,15 +38,15 @@
     "angulartics2": "^8.2.0",
     "core-js": "^2.6.11",
     "firebase": "^6.6.2",
-    "rxjs": "~6.5.3",
+    "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.900.0-rc.5",
+    "@angular-devkit/architect": "~0.900.0-rc.5",
     "@angular-devkit/build-angular": "~0.900.0-rc.5",
-    "@angular-devkit/core": "^9.0.0-rc.5",
-    "@angular-devkit/schematics": "^9.0.0-rc.5",
+    "@angular-devkit/core": "~9.0.0-rc.5",
+    "@angular-devkit/schematics": "~9.0.0-rc.5",
     "@angular/cli": "~9.0.0-rc.5",
     "@angular/compiler-cli": "~9.0.0-rc.5",
     "@angular/language-service": "~9.0.0-rc.5",
@@ -53,7 +55,7 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.17",
     "codelyzer": "^5.2.0",
-    "firebase-tools": "^7.9.0",
+    "firebase-tools": "^7.12.1",
     "husky": "^3.1.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
