--- a/package.json
+++ b/package.json
@@ -23,61 +23,61 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0-rc.5",
-    "@angular/cdk": "~9.0.0-rc.5",
-    "@angular/common": "~9.0.0-rc.5",
-    "@angular/compiler": "~9.0.0-rc.5",
-    "@angular/core": "~9.0.0-rc.5",
+    "@angular/animations": "~9.0.0",
+    "@angular/cdk": "~9.0.0",
+    "@angular/common": "~9.0.0",
+    "@angular/compiler": "~9.0.0",
+    "@angular/core": "~9.0.0",
     "@angular/fire": "~5.4.2",
-    "@angular/forms": "~9.0.0-rc.5",
-    "@angular/material": "~9.0.0-rc.5",
-    "@angular/platform-browser": "~9.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.5",
-    "@angular/router": "~9.0.0-rc.5",
-    "@angular/service-worker": "~9.0.0-rc.5",
-    "angulartics2": "^8.2.0",
+    "@angular/forms": "~9.0.0",
+    "@angular/material": "~9.0.0",
+    "@angular/platform-browser": "~9.0.0",
+    "@angular/platform-browser-dynamic": "~9.0.0",
+    "@angular/router": "~9.0.0",
+    "@angular/service-worker": "~9.0.0",
+    "angulartics2": "^8.3.0",
     "core-js": "^2.6.11",
-    "firebase": "^6.6.2",
+    "firebase": "^7.8.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.900.0-rc.5",
-    "@angular-devkit/build-angular": "~0.900.0-rc.5",
-    "@angular-devkit/core": "~9.0.0-rc.5",
-    "@angular-devkit/schematics": "~9.0.0-rc.5",
-    "@angular/cli": "~9.0.0-rc.5",
-    "@angular/compiler-cli": "~9.0.0-rc.5",
-    "@angular/language-service": "~9.0.0-rc.5",
+    "@angular-devkit/architect": "~0.900.1",
+    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular-devkit/core": "~9.0.1",
+    "@angular-devkit/schematics": "~9.0.1",
+    "@angular/cli": "~9.0.1",
+    "@angular/compiler-cli": "~9.0.0",
+    "@angular/language-service": "~9.0.0",
     "@schuchard/prettier": "^3.1.0",
-    "@types/jasmine": "^3.5.0",
+    "@types/jasmine": "^3.5.3",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.12.17",
-    "codelyzer": "^5.2.0",
+    "@types/node": "^12.12.26",
+    "codelyzer": "^5.2.1",
     "firebase-tools": "^7.12.1",
-    "husky": "^3.1.0",
+    "husky": "^4.2.1",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-firefox-launcher": "^1.2.0",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "lint-staged": "9.4.2",
+    "karma-firefox-launcher": "^1.3.0",
+    "karma-jasmine": "^3.1.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "lint-staged": "^10.0.7",
     "minimatch": "^3.0.4",
     "npm-check": "^5.9.0",
     "prettier": "1.19.1",
     "protractor": "^6.0.0",
-    "rxjs-tslint-rules": "^4.28.0",
-    "source-map-explorer": "^2.1.2",
-    "stylelint": "^12.0.0",
-    "ts-node": "^8.5.4",
+    "rxjs-tslint-rules": "^4.28.3",
+    "source-map-explorer": "^2.2.2",
+    "stylelint": "^13.1.0",
+    "ts-node": "^8.6.2",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "1.18.0",
     "tsutils": "^3.17.1",
-    "typescript": "~3.6.4"
+    "typescript": "^3.7.5"
   },
   "husky": {
     "hooks": {
