--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "build:sm": "ng build --configuration=staging --source-map",
     "build:staging": "ng build --configuration=staging",
     "build:prod": "ng build --configuration=production",
+    "build:prod:ci": "npm run ngcc && ng build --configuration=production",
     "deploy": "npm run build:staging && firebase use staging && firebase deploy --only hosting",
     "deploy:prod": "npm run build:prod && firebase use production && firebase deploy --only hosting",
     "format": "npm run prettier",
+    "ngcc": "ngcc --async false --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "prettier": "prettier --write \"**/*.{js,json,css,scss,md,ts,html,component.html}\"",
-    "postinstall": "ngcc --async false --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "lint": "ng lint",
     "smex": "source-map-explorer",
     "stylelint": "stylelint '**/*.scss' --config .stylelintrc --syntax scss",
     "test": "ng test",
-    "test:ci": "ng test --watch=false --browsers='ChromeHeadlessNoSandbox,FirefoxHeadless'",
+    "test:ci": "npm run ngcc && ng test --watch=false --browsers='ChromeHeadlessNoSandbox,FirefoxHeadless'",
     "update": "npm-check -u"
   },
   "private": true,
