fix: problemas encontrados por las desarrolladoras en Windows
- actualizar imágenes CircleCI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "files.eol": "\n",
   // Excluya módulos de terceros y genere artefactos de los observadores / búsquedas del editor.
   "files.watcherExclude": {
     "**/.git/objects/**": true,
