build: update to Angular v10
- update other dependencies

--- a/angular.json
+++ b/angular.json
@@ -37,8 +37,7 @@
               "projects/web/src/manifest.webmanifest"
             ],
             "styles": ["projects/web/src/styles.scss"],
-            "scripts": [],
-            "es5BrowserSupport": true
+            "scripts": []
           },
           "configurations": {
             "staging": {
