--- a/package.json
+++ b/package.json
@@ -25,62 +25,61 @@
   "private": true,
   "dependencies": {
     "@angular-material-extensions/password-strength": "^6.0.0",
-    "@angular/animations": "~9.1.11",
-    "@angular/cdk": "~9.2.4",
-    "@angular/common": "~9.1.11",
-    "@angular/compiler": "~9.1.11",
-    "@angular/core": "~9.1.11",
-    "@angular/fire": "~6.0.0",
-    "@angular/flex-layout": "^9.0.0-beta.31",
-    "@angular/forms": "~9.1.11",
-    "@angular/material": "~9.2.4",
-    "@angular/platform-browser": "~9.1.11",
-    "@angular/platform-browser-dynamic": "~9.1.11",
-    "@angular/router": "~9.1.11",
-    "@angular/service-worker": "~9.1.11",
-    "angulartics2": "^9.1.0",
-    "firebase": "^7.15.1",
+    "@angular/animations": "~10.0.9",
+    "@angular/cdk": "~10.1.3",
+    "@angular/common": "~10.0.9",
+    "@angular/compiler": "~10.0.9",
+    "@angular/core": "~10.0.9",
+    "@angular/fire": "6.0.0",
+    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/forms": "~10.0.9",
+    "@angular/material": "~10.1.3",
+    "@angular/platform-browser": "~10.0.9",
+    "@angular/platform-browser-dynamic": "~10.0.9",
+    "@angular/router": "~10.0.9",
+    "@angular/service-worker": "~10.0.9",
+    "firebase": "^7.18.0",
     "ngx-auth-firebaseui": "^4.4.0",
-    "rxjs": "~6.5.5",
-    "tslib": "^1.11.1",
+    "rxjs": "~6.6.2",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.901.8",
-    "@angular-devkit/build-angular": "~0.901.8",
-    "@angular-devkit/core": "~9.1.8",
-    "@angular-devkit/schematics": "~9.1.8",
-    "@angular/cli": "~9.1.8",
-    "@angular/compiler-cli": "~9.1.11",
-    "@angular/language-service": "~9.1.11",
+    "@angular-devkit/architect": "^0.1000.6",
+    "@angular-devkit/build-angular": "~0.1000.6",
+    "@angular-devkit/core": "~10.0.6",
+    "@angular-devkit/schematics": "~10.0.6",
+    "@angular/cli": "~10.0.6",
+    "@angular/compiler-cli": "~10.0.9",
+    "@angular/language-service": "~10.0.9",
     "@schuchard/prettier": "^3.1.0",
-    "@types/jasmine": "^3.5.10",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.0.13",
-    "codelyzer": "^5.2.2",
-    "firebase-tools": "^8.4.2",
+    "@types/node": "^14.0.27",
+    "codelyzer": "^6.0.0",
+    "firebase-tools": "^8.7.0",
     "husky": "^4.2.5",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^5.0.2",
-    "karma": "^5.1.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "jasmine-core": "^3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "^5.1.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "^3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "lint-staged": "^10.2.10",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "lint-staged": "^10.2.11",
     "minimatch": "^3.0.4",
     "npm-check": "^5.9.2",
     "prettier": "^2.0.5",
-    "protractor": "^7.0.0",
-    "rxjs-tslint-rules": "^4.33.1",
+    "protractor": "~7.0.0",
+    "rxjs-tslint-rules": "^4.34.0",
     "source-map-explorer": "^2.4.2",
-    "stylelint": "^13.6.0",
+    "stylelint": "^13.6.1",
     "ts-node": "^8.10.2",
-    "tslint": "^6.1.2",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "1.18.0",
     "tsutils": "^3.17.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.7"
   },
   "husky": {
     "hooks": {
