--- a/package.json
+++ b/package.json
@@ -24,42 +24,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-material-extensions/password-strength": "^8.1.1",
-    "@angular/animations": "~11.2.7",
-    "@angular/cdk": "~11.2.7",
-    "@angular/common": "~11.2.7",
-    "@angular/compiler": "~11.2.7",
-    "@angular/core": "~11.2.7",
+    "@angular-material-extensions/password-strength": "^8.2.1",
+    "@angular/animations": "~12.0.1",
+    "@angular/cdk": "~12.0.1",
+    "@angular/common": "~12.0.1",
+    "@angular/compiler": "~12.0.1",
+    "@angular/core": "~12.0.1",
     "@angular/fire": "^6.1.4",
-    "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~11.2.7",
-    "@angular/material": "~11.2.7",
-    "@angular/platform-browser": "~11.2.7",
-    "@angular/platform-browser-dynamic": "~11.2.7",
-    "@angular/router": "~11.2.7",
-    "@angular/service-worker": "~11.2.7",
-    "firebase": "^8.3.2",
+    "@angular/flex-layout": "^12.0.0-beta.34",
+    "@angular/forms": "~12.0.1",
+    "@angular/material": "~12.0.1",
+    "@angular/platform-browser": "~12.0.1",
+    "@angular/platform-browser-dynamic": "~12.0.1",
+    "@angular/router": "~12.0.1",
+    "@angular/service-worker": "~12.0.1",
+    "firebase": "^8.6.2",
     "first-input-delay": "^0.1.3",
-    "ngx-auth-firebaseui": "^5.2.0",
+    "ngx-auth-firebaseui": "^5.3.0",
     "proxy-polyfill": "^0.3.2",
     "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1102.6",
-    "@angular-devkit/build-angular": "~0.1102.6",
-    "@angular-devkit/core": "~11.2.6",
-    "@angular-devkit/schematics": "~11.2.6",
-    "@angular/cli": "~11.2.6",
-    "@angular/compiler-cli": "~11.2.7",
-    "@angular/language-service": "~11.2.7",
+    "@angular-devkit/architect": "^0.1200.1",
+    "@angular-devkit/build-angular": "~12.0.1",
+    "@angular-devkit/core": "~12.0.1",
+    "@angular-devkit/schematics": "~12.0.1",
+    "@angular/cli": "~12.0.1",
+    "@angular/compiler-cli": "~12.0.1",
+    "@angular/language-service": "~12.0.1",
     "@schuchard/prettier": "^5.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.14.37",
     "codelyzer": "^6.0.1",
-    "firebase-tools": "^9.8.0",
+    "firebase-tools": "^9.11.0",
     "husky": "^4.3.8",
     "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "^6.0.0",
@@ -72,7 +72,7 @@
     "lint-staged": "^10.5.4",
     "minimatch": "^3.0.4",
     "npm-check": "^5.9.2",
-    "prettier": "^2.2.1",
+    "prettier": "2.2.1",
     "protractor": "~7.0.0",
     "rxjs-tslint-rules": "^4.34.7",
     "source-map-explorer": "^2.5.2",
@@ -81,7 +81,7 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tsutils": "^3.21.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.2.4"
   },
   "husky": {
     "hooks": {
