chore(npm): fix npm audit issues
- update prettier and apply updates to files
- prettier 2.7.x seems to break things, so stick with 2.6.x for now

--- a/package.json
+++ b/package.json
@@ -60,24 +60,24 @@
     "@types/jasminewd2": "^2.0.9",
     "@types/node": "^14.14.37",
     "codelyzer": "^6.0.2",
-    "firebase-tools": "^9.11.0",
+    "firebase-tools": "^11.25.3",
     "husky": "^4.3.8",
     "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-firefox-launcher": "^2.1.0",
+    "karma": "^6.3.20",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.6.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "lint-staged": "^11.0.0",
     "minimatch": "^3.0.8",
-    "npm-check": "^5.9.2",
+    "npm-check": "^6.0.1",
     "postcss": "^8.2.15",
-    "prettier": "^2.5.1",
+    "prettier": "~2.6.2",
     "protractor": "~7.0.0",
     "rxjs-tslint-rules": "^4.34.8",
-    "source-map-explorer": "^2.5.2",
+    "source-map-explorer": "^2.5.3",
     "stylelint": "^13.13.1",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
