--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
     "@angular-devkit/build-angular": "~12.0.1",
     "@angular-devkit/core": "~12.0.1",
     "@angular-devkit/schematics": "~12.0.1",
+    "@angular-eslint/builder": "12.7.0",
+    "@angular-eslint/eslint-plugin": "12.7.0",
+    "@angular-eslint/eslint-plugin-template": "12.7.0",
+    "@angular-eslint/schematics": "12.7.0",
+    "@angular-eslint/template-parser": "12.7.0",
     "@angular/cli": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
@@ -59,7 +64,9 @@
     "@types/jasmine": "^3.7.4",
     "@types/jasminewd2": "^2.0.9",
     "@types/node": "^14.14.37",
-    "codelyzer": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "^7.26.0",
     "firebase-tools": "^11.25.3",
     "husky": "^4.3.8",
     "jasmine-core": "^3.7.1",
@@ -76,12 +83,9 @@
     "postcss": "^8.2.15",
     "prettier": "~2.6.2",
     "protractor": "~7.0.0",
-    "rxjs-tslint-rules": "^4.34.8",
     "source-map-explorer": "^2.5.3",
     "stylelint": "^13.13.1",
     "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "tsutils": "^3.21.0",
     "typescript": "~4.2.4"
   },
