--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
   "private": true,
   "dependencies": {
     "@angular-material-extensions/password-strength": "^8.2.1",
-    "@angular/animations": "~13.4.0",
-    "@angular/cdk": "~13.3.9",
-    "@angular/common": "~13.4.0",
-    "@angular/compiler": "~13.4.0",
-    "@angular/core": "~13.4.0",
+    "@angular/animations": "^14.3.0",
+    "@angular/cdk": "^13.3.9",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
     "@angular/fire": "^6.1.5",
     "@angular/flex-layout": "^12.0.0-beta.34",
-    "@angular/forms": "~13.4.0",
-    "@angular/material": "~13.3.9",
-    "@angular/platform-browser": "~13.4.0",
-    "@angular/platform-browser-dynamic": "~13.4.0",
-    "@angular/router": "~13.4.0",
-    "@angular/service-worker": "~13.4.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/material": "^13.3.9",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
+    "@angular/service-worker": "^14.3.0",
     "firebase": "^8.6.2",
     "first-input-delay": "^0.1.3",
     "ngx-auth-firebaseui": "^5.3.0",
@@ -47,26 +47,26 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1303.11",
-    "@angular-devkit/build-angular": "~13.3.11",
-    "@angular-devkit/core": "~13.3.11",
-    "@angular-devkit/schematics": "~13.3.11",
-    "@angular-eslint/builder": "13.5.0",
-    "@angular-eslint/eslint-plugin": "13.5.0",
-    "@angular-eslint/eslint-plugin-template": "13.5.0",
-    "@angular-eslint/schematics": "13.5.0",
-    "@angular-eslint/template-parser": "13.5.0",
-    "@angular/cli": "~13.3.11",
-    "@angular/compiler-cli": "~13.4.0",
-    "@angular/language-service": "~13.4.0",
+    "@angular-devkit/architect": "^0.1402.12",
+    "@angular-devkit/build-angular": "^14.2.12",
+    "@angular-devkit/core": "^14.2.12",
+    "@angular-devkit/schematics": "^14.2.12",
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "14.4.0",
+    "@angular-eslint/eslint-plugin-template": "14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "14.4.0",
+    "@angular/cli": "^14.2.12",
+    "@angular/compiler-cli": "^14.3.0",
+    "@angular/language-service": "^14.3.0",
     "@babel/core": "^7.18.13",
     "@schuchard/prettier": "^5.0.0",
     "@types/jasmine": "^3.7.4",
     "@types/jasminewd2": "^2.0.9",
     "@types/node": "^14.14.37",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "eslint": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "eslint": "^8.23.0",
     "firebase-tools": "^11.25.3",
     "husky": "^4.3.8",
     "jasmine-core": "^3.7.1",
