--- a/firebase.json
+++ b/firebase.json
@@ -2,7 +2,7 @@
   "hosting": [
     {
       "target": "web",
-      "public": "dist/web",
+      "public": "dist/web/browser",
       "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
       "appAssociation": "AUTO",
       "rewrites": [
