--- a/package.json
+++ b/package.json
@@ -9,88 +9,83 @@
     "build:sm": "ng build --configuration=staging --source-map",
     "build:staging": "ng build --configuration=staging",
     "build:prod": "ng build --configuration=production",
-    "build:prod:ci": "npm run ngcc && ng build --configuration=production",
     "deploy": "npm run build:staging && firebase use staging && firebase deploy --only hosting",
     "deploy:prod": "npm run build:prod && firebase use production && firebase deploy --only hosting",
     "format": "npm run prettier",
-    "ngcc": "ngcc --async false --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "prettier": "prettier --write \"**/*.{js,json,css,scss,md,ts,html,component.html}\"",
     "lint": "ng lint",
     "smex": "source-map-explorer",
     "stylelint": "stylelint \"**/*.scss\" --config .stylelintrc --syntax scss",
     "test": "ng test",
-    "test:ci": "npm run ngcc && ng test --watch=false --browsers='ChromeHeadlessNoSandbox,FirefoxHeadless'",
-    "update": "npm-check -u"
+    "test:ci": "npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessNoSandbox,FirefoxHeadless",
+    "update": "npm-check -u",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
-    "@angular-material-extensions/password-strength": "^12.1.0",
-    "@angular/animations": "^16.2.11",
-    "@angular/cdk": "^16.2.2",
-    "@angular/common": "^16.2.11",
-    "@angular/compiler": "^16.2.11",
-    "@angular/core": "^16.2.11",
-    "@angular/fire": "^7.6.1",
-    "@angular/forms": "^16.2.11",
-    "@angular/material": "^16.2.2",
-    "@angular/platform-browser": "^16.2.11",
-    "@angular/platform-browser-dynamic": "^16.2.11",
-    "@angular/router": "^16.2.11",
-    "@angular/service-worker": "^16.2.11",
-    "firebase": "^10.5.2",
+    "@angular/animations": "^20.2.2",
+    "@angular/cdk": "^20.2.1",
+    "@angular/common": "^20.2.2",
+    "@angular/compiler": "^20.2.2",
+    "@angular/core": "^20.2.2",
+    "@angular/fire": "^20.0.1",
+    "@angular/forms": "^20.2.2",
+    "@angular/material": "^20.2.1",
+    "@angular/platform-browser": "^20.2.2",
+    "@angular/platform-browser-dynamic": "^20.2.2",
+    "@angular/router": "^20.2.2",
+    "@angular/service-worker": "^20.2.2",
+    "firebase": "^12.2.0",
     "first-input-delay": "^0.1.3",
     "proxy-polyfill": "^0.3.2",
-    "rxjs": "^6.6.7",
-    "tslib": "^2.2.0",
-    "zone.js": "~0.13.1"
+    "rxjs": "^7.8.2",
+    "tslib": "^2.8.1",
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1602.9",
-    "@angular-devkit/build-angular": "^16.2.9",
-    "@angular-devkit/core": "^16.2.9",
-    "@angular-devkit/schematics": "^16.2.9",
-    "@angular-eslint/builder": "16.2.0",
-    "@angular-eslint/eslint-plugin": "16.2.0",
-    "@angular-eslint/eslint-plugin-template": "16.2.0",
-    "@angular-eslint/schematics": "16.2.0",
-    "@angular-eslint/template-parser": "16.2.0",
-    "@angular/cli": "^16.2.9",
-    "@angular/compiler-cli": "^16.2.11",
-    "@angular/language-service": "^16.2.11",
-    "@babel/core": "^7.23.2",
+    "@angular-devkit/architect": "^0.2002.1",
+    "@angular-devkit/core": "^20.2.1",
+    "@angular-devkit/schematics": "^20.2.1",
+    "@angular-eslint/builder": "20.2.0",
+    "@angular-eslint/eslint-plugin": "20.2.0",
+    "@angular-eslint/eslint-plugin-template": "20.2.0",
+    "@angular-eslint/schematics": "20.2.0",
+    "@angular-eslint/template-parser": "20.2.0",
+    "@angular/build": "^20.2.1",
+    "@angular/cli": "^20.2.1",
+    "@angular/compiler-cli": "^20.2.2",
+    "@angular/language-service": "^20.2.2",
+    "@babel/core": "^7.28.3",
     "@schuchard/prettier": "^5.0.0",
-    "@types/jasmine": "^3.7.4",
-    "@types/jasminewd2": "^2.0.9",
-    "@types/node": "^14.14.37",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "eslint": "^8.39.0",
-    "firebase-tools": "^12.8.0",
-    "husky": "^4.3.8",
-    "jasmine-core": "^3.7.1",
+    "@types/jasmine": "^5.1.9",
+    "@types/jasminewd2": "^2.0.13",
+    "@types/node": "^24.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@typescript-eslint/types": "^8.0.0",
+    "@typescript-eslint/utils": "^8.0.0",
+    "eslint": "^8.57.0",
+    "firebase-tools": "^14.15.0",
+    "husky": "^9.1.7",
+    "jasmine-core": "^5.9.0",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.20",
-    "karma-chrome-launcher": "~3.1.1",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-firefox-launcher": "^2.1.2",
-    "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "lint-staged": "^11.0.0",
-    "minimatch": "^3.0.8",
+    "karma-firefox-launcher": "^2.1.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "lint-staged": "^16.1.5",
+    "minimatch": "^10.0.3",
     "npm-check": "^6.0.1",
-    "postcss": "^8.2.15",
+    "postcss": "^8.5.6",
     "prettier": "~3.0.3",
     "protractor": "~7.0.0",
     "source-map-explorer": "^2.5.3",
     "stylelint": "^13.13.1",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.9.2",
     "tsutils": "^3.21.0",
-    "typescript": "~4.9.5"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && ng lint && npm run stylelint"
-    }
+    "typescript": "~5.9.2"
   },
   "lint-staged": {
     "*.{js,json,css,scss,md,ts,html,component.html}": [
